tests/ui/traits/next-solver/dont-canonicalize-re-error.stderr
error[E0261]: use of undeclared lifetime name `'missing`
  --> $DIR/dont-canonicalize-re-error.rs:25:26
   |
LL | impl<A: Sized> Constrain<'missing> for W<A> {}
   |                          ^^^^^^^^ undeclared lifetime
   |
help: consider introducing lifetime `'missing` here
   |
LL | impl<'missing, A: Sized> Constrain<'missing> for W<A> {}
   |      +++++++++

error[E0119]: conflicting implementations of trait `Tr<'_>` for type `W<_>`
  --> $DIR/dont-canonicalize-re-error.rs:21:1
   |
LL | impl<'a, A: ?Sized> Tr<'a> for W<A> {}
   | ----------------------------------- first implementation here
LL | struct W<A: ?Sized>(A);
LL | impl<'a, A: ?Sized> Tr<'a> for A where A: Constrain<'a> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `W<_>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0119, E0261.
For more information about an error, try `rustc --explain E0119`.
